# Froth_monitor

./: .gitignore  README.md  ROI_and_arrow_drawing.py  image_analysis.py  main_GUI.py  package_requirements.txt  pyproject.toml  readme.txt  requirements.txt  setup.py
data/auto_save/: 2024-11-22_16-23-27.json  information.txt
data/output/: 20241120.csv  20241121.csv  20241121_2.csv  20241123.csv
froth_monitor/: __init__.py  __main__.py  export.py  gui.py  image_analysis.py  video_recorder.py
i_love_froth/: GUI.py  __init__.py  __main__.py  arrow.py  autosaver.py  export.py  gui.py  image_analysis.py  roi.py  test.py  video_recorder.py
tests/: test_main.py
