[tool.poetry]
name = "froth_monitor"
version = "0.1.0"
description = ""
authors = ["Yiyang <eeeyoung2001@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.14"
et-xmlfile = "^2.0.0"
numpy = "2.1.3"
opencv-python = "^4.10.0.84"
openpyxl = "^3.1.5"
pyqtgraph = "^0.13.7"
PySide6 = "^6.8.0.2"
pytest = "^8.3.3"
pytest-qt = "^4.4.0"
importlib-metadata = "^8.5.0"
importlib = "^1.0.4"

[tool.poetry.group.dev.dependencies]
shiboken6 = "^6.8.0.2"

[tool.poetry.scripts]
froth_monitor = "froth_monitor.__main__:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

